header table for email templating

--- a/suscribe.html
+++ b/suscribe.html
@@ -1,14 +1,68 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+        <title>WinStar World Casino Unsubscribe Center</title>
+        <style type="text/css">
+            body {font-family: Verdana, Arial, sans-serif;}
+            a {color: #330000;}
+            img {display: block; margin: 0px;}
+	    </style>
     </head>
     <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+        <table width="850" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#000000">
+
+            <!-- Spacer -->
+            <tbody>
+                <tr>
+                    <td colspan="3" width="850" bgcolor="#000000" valign="top" align="center" height="14">
+                        <img style="display: block;" src="http://image.s6.exacttarget.com/lib/fe9412727266077e71/m/1/hero_shadow.jpg" width="850" height="14">
+                    </td>
+                </tr>
+                <!-- End of Spacer Area -->
+
+                <!-- Header Area, do not modify-->
+                <tr>
+                    <td colspan="3">
+                        <table width="850" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#000000">
+                            <tbody><tr>
+                                <td width="13"></td>
+                                <td width="149"><img style="display: block;" src="http://image.s6.exacttarget.com/lib/fe9412727266077e71/m/1/WS-Lgo-top.jpg" width="90" height="91" border="0"></td>
+                                <td width="675">
+                                    <p style="font-size: 13px; text-align: right; color: #ffffff;">1.800.622.6317&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://winstarworldcasino.com/directions" target="_blank" style="color:#ffffff" ;="">Directions</a></p>
+                                    <img style="display: block;" src="http://image.s6.exacttarget.com/lib/fe9412727266077e71/m/1/Menu-Bar.jpg" width="675" height="42" border="0" usemap="#main_nav_map">
+                                    <map name="main_nav_map">
+                                        <area shape="rect" coords="0,0,112,42" href="http://winstarworldcasino.com/accommodations" target="_blank" alt="Accomodations" title="Accomodations">
+                                        <area shape="rect" coords="113,0,168,42" href="http://winstarworldcasino.com/casino" target="_blank" alt="Casino" title="Casino">
+                                        <area shape="rect" coords="169,0,249,42" href="http://winstarworldcasino.com/events/promotions+poker+off_track_betting+bingo" target="_blank" alt="Promotions" title="Promotions">
+                                        <area shape="rect" coords="250,0,344,42" href="http://winstarworldcasino.com/entertainment" target="_blank" alt="Entertainment" title="Entertainment">
+                                        <area shape="rect" coords="345,0,400,42" href="http://winstarworldcasino.com/dining" target="_blank" alt="Dining" title="Dinig">
+                                        <area shape="rect" coords="401,0,450,42" href="http://winstarworldcasino.com/golf" target="_blank" alt="Golf" title="Golf">
+                                        <area shape="rect" coords="451,0,517,42" href="http://winstarworldcasino.com/amenities" target="_blank" alt="Amenities" title="Amenities">
+                                        <area shape="rect" coords="518,0,583,42" href="http://winstarworldcasino.com/meetings" target="_blank" alt="Meetings" title="Meetings">
+                                        <area shape="rect" coords="584,0,675,42" href="http://winstarworldcasino.com/players-club" target="_blank" alt="Players Club" title="Players Club">
+                                    </map></td>
+                                <td width="13"></td>
+                            </tr>
+                        </tbody></table>
+                    </td>
+                </tr>
+                <!-- End of Header Area -->
+
+                <!-- Spacer -->
+                <tr>
+                    <td colspan="3" width="600" bgcolor="#000000" valign="top" align="center" height="14">
+                        <img style="display: block;" src="http://image.s6.exacttarget.com/lib/fe9412727266077e71/m/1/hero_shadow.jpg" width="600" height="14">
+                    </td>
+                </tr>
+                <!-- End of Spacer Area -->
+            </tbody>
+        </table>
 
         <form action="http://cl.exct.net/subscribe.aspx?lid=YOUR LIST ID HERE" name="subscribeForm" method="post">
         <input type="hidden" name="thx" value="YOUR THANK YOU PAGE HERE" />
         <input type="hidden" name="err" value="YOUR ERROR PAGE HERE" />
         <input type="hidden" name="usub" value="YOUR SUCCESS UNSUB PAGE HERE" />
-        <input type="hidden" name="MID" value="YOUR MEMBER ID HERE" />
+        <input type="hidden" name="MID" value="6274574" />
         <input type="hidden" name="Subscriber_Key" value="WS_ + Email" />
         <table cellpadding="0" cellspacing="0" border="0">
             <tr>
