web collect structure webpack, sass

--- a/suscribe.html
+++ b/suscribe.html
@@ -9,6 +9,13 @@
 	    </style>
     </head>
     <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+        <header>
+            <nav>
+                <ul>
+                    <li><img style="display: block;" src="http://image.s6.exacttarget.com/lib/fe9412727266077e71/m/1/WS-Lgo-top.jpg" width="90" height="91" border="0"></li>
+                </ul>
+            </nav>
+        </header>
         <table width="850" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#000000">
 
             <!-- Spacer -->
@@ -26,7 +33,7 @@
                         <table width="850" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#000000">
                             <tbody><tr>
                                 <td width="13"></td>
-                                <td width="149"><img style="display: block;" src="http://image.s6.exacttarget.com/lib/fe9412727266077e71/m/1/WS-Lgo-top.jpg" width="90" height="91" border="0"></td>
+                                <td width="149"></td>
                                 <td width="675">
                                     <p style="font-size: 13px; text-align: right; color: #ffffff;">1.800.622.6317&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://winstarworldcasino.com/directions" target="_blank" style="color:#ffffff" ;="">Directions</a></p>
                                     <img style="display: block;" src="http://image.s6.exacttarget.com/lib/fe9412727266077e71/m/1/Menu-Bar.jpg" width="675" height="42" border="0" usemap="#main_nav_map">
@@ -116,5 +123,7 @@
             </tr>
         </table>
         </form>
+
+         <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
     </body>
 </html>
