--- a/index.html
+++ b/index.html
@@ -85,11 +85,13 @@ function checkForm() {
 		return false;
 	}
 	if (!isValidEmail(document.subscribeForm.elements['Email Address'].value)) {
-	document.subscribeForm.elements['Email Address'].style.backgroundColor='yellow';
+	    document.subscribeForm.elements['Email Address'].style.backgroundColor='yellow';
 		alert("Please enter a valid Email Address. (name@host.com)");
 		document.subscribeForm.elements['Email Address'].focus();
 		return false;
-	}
+	} else {
+        document.subscribeForm.elements['Subscriber Key']
+    }
 }
 //-->
 </SCRIPT>
@@ -100,6 +102,7 @@ name="subscribeForm" method="post" onSubmit="return checkForm();">
 <input type=hidden name="err" value="http://www.bad.com">
 <input type=hidden name="SubAction" value="sub">
 <input type=hidden name="MID" value="6274574">
+<input type="hidden" name="Subscriber Key" />
 
 <table cellpadding="0" cellspacing="0" border="0">
 <tr>
