web collect new feature list salesforce

--- a/subscribe.html
+++ b/subscribe.html
@@ -30,8 +30,9 @@
                     <input type=hidden name="SubAction" value="sub">
                     <input type=hidden name="MID" value="6274574">
                     <input type=hidden name="ETSubscriberKey" value="WS_">
-                    <input type="hidden" name="Offer_1" value="Casino Game Related Emails:" />
-                    <input type="hidden" name="Offer_2" value="Entertainment Related Emails:" />
+                    <input type="hidden" name="Offer_1" value="Casino Gaming/Promotional Emails :" />
+                    <input type="hidden" name="Offer_2" value="Entertainment Emails:" />
+                    <input type="hidden" name="Offer_3" value="Online Gaming Emails:" />
                     <div class="group-row">
                         <div class="group">
                             <label>First Name <span class="field-required">*</span></label>
@@ -53,22 +54,31 @@
                         </div>
                     </div>
                     <div class="group-row">
-                        <div class="group">
+                        <div class="group-checkbox">
                             <div>
-                                <label class="gfield_label">Sign Up For Casino Gaming/Promotions Emails</label>
+                                <label class="gfield_label">Sign up for Casino Gaming/Promotional Emails</label>
                             </div>
                             <div class="group-radio">
                                 <input type="checkbox" name="lid" value="49508">
-                                <span>check to subscribe</span>
+                                <span>Check to subscribe</span>
                             </div>
                         </div>
-                        <div class="group">
+                        <div class="group-checkbox">
                             <div>
                                 <label class="gfield_label">Sign Up For Entertainment Emails</label>
                             </div>
                             <div class="group-radio">
                                 <input type="checkbox" name="lid" value="49507">
-                                <span>check to subscribe</span>
+                                <span>Check to subscribe</span>
+                            </div>
+                        </div>
+                         <div class="group-checkbox">
+                            <div>
+                                <label class="gfield_label">Sign up for Online Gaming Emails</label>
+                            </div>
+                            <div class="group-radio">
+                                <input type="checkbox" name="lid" value="49879">
+                                <span>Check to subscribe</span>
                             </div>
                         </div>
                     </div>
@@ -86,7 +96,8 @@
             </section>
         </main>
         <footer>
-            <img style="display: block;" src="http://image.s6.exacttarget.com/lib/fe9412727266077e71/m/1/footer.jpg" width="100%" height="102" border="0">
+            <img id="image-adventure" src="http://image.reply.winstaremail.com/lib/fe8c12727260017a71/m/2/Default-Landscape-adventure.png" alt="image-adventure">
+            <img id="image-win" src="http://image.reply.winstaremail.com/lib/fe8c12727260017a71/m/2/Default-Landscape-win.png" alt="image-winstar">
         </footer>
          <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
     </body>
